--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
-    "nodemailer": "^6.9.3"
+    "nodemailer": "^6.9.3",
+    "react-email": "^1.9.4",
+    "resend": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
